@@ -144,7 +144,7 @@
   work on native MS Windows. You must use an external viewer to
   view the images you create.</p>
 
- <p>Line 1 requires <span class="sup"><a href=
+  <p>Line 1 requires <span class="sup"><a href=
   "#rubygems">2</a></span> the RMagick.rb file, which defines the
   <b>Magick</b> module. The Magick module contains 3 major classes,
   <b>ImageList</b>, <b>Image</b>, and <b>Draw</b>. This section -
@@ -815,14 +815,15 @@ exit
 
       <dd>Create a horizontal mirror image</dd>
 
-      <dt class="ilist"><a href="ilist.html#layers">layers</a></dt>
-
-      <dd class="ilist">Optimize or compare image layers</dd>
-
       <dt class="ilist"><a href="ilist.html#mosaic">mosaic</a></dt>
 
       <dd class="ilist">Inlay all the images in the imagelist into
       a single image</dd>
+
+      <dt class="ilist"><a href=
+      "ilist.html#optimize_layers">optimize_layers</a></dt>
+
+      <dd class="ilist">Optimize or compare image layers</dd>
 
       <dt><a href="image3.html#roll">roll</a></dt>
 
@@ -1388,9 +1389,9 @@ exit
     attributes <code>rx</code> and <code>ry</code> in the <a href=
     "struct.html#AffineMatrix"><code>AffineMatrix</code></a> class
     use radians instead of degrees.</p>
- </div>
+  </div>
 
- <p class="spacer"> </p>
+  <p class="spacer"> </p>
 
   <div class="nav">
     &laquo; <a href="index.html">Prev</a> | <a href=
